public/css/style.css
body {
	color: white;
	background: lightgreen;
	font-family: verdana, arial, sans-serif;
}

#wrapper {
	width: 95%;
	background-color: gray;
	box-shadow: 3px 3px 3px #0d5806;
	margin: 0 auto;
}

.logout {
	display: block;
	text-align: right;
}

/* Main hero content */
#hero {
	display: block;
	position: relative;
	padding: 20px;
	margin: 0;
	text-align: center;
	color: #90ee90;
}

h1 {
	font-family: "georgia", "times new roman", serif;
	text-indent: -9999px;
}

h2 {
	font-family: georgia, times-new-roman, serif;
	font-size: 25px;
}

p {
	color: #000;
	font-size: 18px;
}

a {
	color: #90ee90;
}

a:hover {
	color: darkgreen;
}

img {
	padding: 1em 0 0 1em;
	width: 24rem;
}

nav {
	float: right;
	padding-right: 1em;
}

nav ul {
	list-style: none;
	align-content: center;
	padding-top: calc(0.5em + 2px);
}

nav li {
	display: inline;
	padding: 0.5em 1em;
	border: 2px solid darkgreen;
}

nav a {
	font-weight: bold;
	text-decoration: none;
	color: darkgreen;
	font-size: 1em;
}

nav a:link {
	color: darkgreen;
}

nav a:hover,
nav a:focus {
	color: #11ef21;
}

.container {
	position: absolute;
	margin: 50px auto;
}

dl {
	color: #000;
	text-align: left;
	font-size: 1.25;
}

.center {
	display: block;
	margin: 0 auto;
	width: 100%;
}

footer {
	font-size: 0.7em;
	margin-top: 5em;
}

#table {
	color: black;
	width: 100%;
}

#table {
	background-color: white;
	color: black;
	margin: 0 auto;
	width: 100%;
}

#table tr:nth-child(even) {
	background-color: #90ee90;
}

#ticketEntry {
	border: none;
	margin: 0 auto;
	width: 50%;
	color: #000;
	border-collapse: collapse;
	border-collapse:separate;
  	border-spacing: 10px 15px;
}

#ticketEntry > td {
	border-style : hidden;
	border-collapse:collapse;
}

.requirements {
	margin: 0 auto;
	color: black;
	width: fit-content;
	text-align: left;
}

.requirements h4 {
	text-align: center;
}

.requirements li {
	padding: 0;
}

.requirements p {
	font-size: .95em;
}	



/* Tablet */
@media only screen and (max-width: 48rem) {

	#wrapper {
		width: 100%;
		padding: 0;
		margin: 0 auto;
		box-shadow: none;
	}

	header {
		width: 100%;
	}

	img {
		display: block;
		padding: 2em 0;
		margin: 0 auto;
		width: 30em;
	}
	
	nav {
		padding: 0;
		margin: 0 auto;
		width: 100%;
	}
	
	nav ul {
		margin: 0 auto;
		padding: 0 0 2em 0;
		width: fit-content;
	}
	
	nav li {
		padding: 0.5em 1em;
	}

	#hero {
		padding: 0;
		margin: 0;
		width: 100%;
	}
}

/* Mobile */
@media only screen and (max-width: 30rem) { 

	.hideMobile {
		display: none;
	}

	img {
		display: block;
		padding-bottom: 2em;
		margin: 0 auto;
		width: 20em;
	}
}

